# src/Loaders/swagger.json
@@ -100,7 +100,8 @@
                 "type": "object",
                 "properties": {
                   "email": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "usuario@email.com"
                   }
                 }
               }
@@ -110,6 +111,12 @@
         "responses": {
           "200": {
             "description": "Correo de recuperación enviado"
+          },
+          "404": {
+            "description": "Usuario no encontrado"
+          },
+          "500": {
+            "description": "Error al enviar el correo"
           }
         }
       }
@@ -127,8 +134,13 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "password": {
-                    "type": "string"
+                  "email": {
+                    "type": "string",
+                    "example": "usuario@email.com"
+                  },
+                  "newPassword": {
+                    "type": "string",
+                    "example": "NuevaContraseña123"
                   }
                 }
               }
@@ -137,7 +149,13 @@
         },
         "responses": {
           "200": {
-            "description": "Contraseña restablecida"
+            "description": "Contraseña restablecida con éxito"
+          },
+          "404": {
+            "description": "Usuario no encontrado"
+          },
+          "500": {
+            "description": "Error al restablecer la contraseña"
           }
         }
       }
